crates/graphite/tests/ui/schema_partial_recovery.stderr
error: expected `:`
  --> tests/ui/schema_partial_recovery.rs:16:30
   |
16 |         node Employee { name String }
   |                              ^^^^^^
